# risc0-ed25519-zk-sparql

./: .gitignore  Cargo.toml  README.md  analyze_results.py  architecture.mmd  architecture.tex  bench.sh  bench.txt  combine_criterion.sh  contrast.txt  generate_diagram.sh  plot_benchmarks.py  plot_sizes.py  profile.sh  profile_minimal_query.pb  prover.mmd  query_sizes.json  result.temp.json  run.sh  run_benchmark_plot.sh  run_release.sh  setup.sh  sparql_result.json  sparql_result_minimal.json  verifier.mmd
.cargo/: config.toml
.github/workflows/: benchmark.yml
bench-results/: bench-fixed-local.txt  benchmark_table.tex  macos-ci.txt  res.json  ubuntu-ci.txt
core/: Cargo.toml
core/src/: lib.rs  load.rs  output.rs  query.rs  verify.rs
host/: Cargo.toml
host/benches/: proving_verifying.rs
host/src/: lib.rs  load.rs  main.rs  run.rs  util.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest-ed25519-verify/: Cargo.toml
methods/guest-ed25519-verify/src/: main.rs
methods/guest-empty/: Cargo.toml
methods/guest-empty/src/: main.rs
methods/guest-query-object/: Cargo.toml
methods/guest-query-object/src/: main.rs
methods/guest-query-string/: Cargo.toml
methods/guest-query-string/src/: main.rs
methods/guest/src/: main.rs  verify.rs
queries/: can-drive.rq
temp/: minimal_can-drive_result.json  minimal_employment-status_result.json  minimal_query_result.json
