[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
serde = "1.0"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
oxrdf = { git = "https://github.com/oxigraph/oxigraph.git", rev = "9df40c1782a91dcf20c3f4f380789d9a7e14df42" }
oxttl = { git = "https://github.com/oxigraph/oxigraph.git", rev = "9df40c1782a91dcf20c3f4f380789d9a7e14df42" }
spareval = { git = "https://github.com/oxigraph/oxigraph.git", rev = "9df40c1782a91dcf20c3f4f380789d9a7e14df42" }
spargebra = { git = "https://github.com/oxigraph/oxigraph.git", rev = "9df40c1782a91dcf20c3f4f380789d9a7e14df42", features = ["serde"] }
sparesults = { git = "https://github.com/oxigraph/oxigraph.git", rev = "9df40c1782a91dcf20c3f4f380789d9a7e14df42" }
