[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
vc-utils = { git = "https://github.com/jeswr/vc-util.rs", rev = "4160787ff202abb7aea1686f105d2d4dfecbebd4" }
serde_json = "1.0.140"
