[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
core = { path = "../core" }
risc0-zkvm = { version = "^2.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
spareval = { version = "0.1.0" }
serde = "1.0"
vc-utils = { git = "https://github.com/jeswr/vc-util.rs", rev = "4160787ff202abb7aea1686f105d2d4dfecbebd4" }
serde_json = "1.0.140"
hex = "0.4.3"
borsh = "1.3.0"
bincode = "2.0.1"
clap = { version = "4.4", features = ["derive"] }
