[package]
name = "query-object"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
core = { path = "../../core" }
risc0-zkvm = { version = "^2.0.1", default-features = false, features = ['std', 'unstable'] }
spargebra = { git = "https://github.com/oxigraph/oxigraph.git", rev = "9df40c1782a91dcf20c3f4f380789d9a7e14df42", features = ["serde"] }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
